tests/NormalTests/paczka1/fuzzy1/50217622.err
Error in line 5: S50 S50 2,2
Error in line 14: uLKqHj4 S721 58,9
Error in line 6: S50 S721 94,5
Error in line 24: Mlruui S50 73,4
Error in line 32: PnVfnVV A86 43,9
Error in line 38: F1Sr7IF S721 91,4
